welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:21: error: not found: value get
      if(get(y) == y-1){setPos((getX()+1), 0)}
         ^