welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  while(!posFinale()){posSuivante()}
}

def posFinale():Boolean ={
  val y:Int = getMondeHauteur()
  val x:Int = getMondeLargeur()
  var z:Boolean = false
  if(getX() == x-1 && getY() == y-1){z = true}
  return(z)
}

def posSuivante(){
  var i:Int = 0
  val x:Int = getMondeLargeur()
  val y:Int = getMondeHauteur()
  ecritMessage(i)
  while(getY() < y-1){
    setPos(getX(), getY()+1)
    i += 1
    while(getX() < x-1){
      if(get(y) == y-1){setPos((getX()+1), 0)}
    }
    ecritMessage(i)
  }
}